[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/tilemaps/Enviroment.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tilemaps/Decorations.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/levels/Level8.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Human.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/KingAndPigs - basic.ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/Hud/RefreshButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/PigWithBomb.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Hud/TutorialBox.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
ninja_alert = true

[node name="Enviroment" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -131059, 0, 65537, -131058, 0, 65537, -131057, 0, 65537, -131056, 0, 65537, -131055, 0, 65537, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 2, 0, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 2, 1, 65552, 0, 65537, 65553, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65538, 131077, 12, 0, 131078, 20, 0, 131079, 18, 1, 131080, 18, 1, 131081, 18, 1, 131082, 18, 1, 131083, 18, 1, 131084, 18, 1, 131085, 18, 1, 131086, 23, 1, 131087, 0, 65536, 131088, 0, 65537, 131089, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 2, 0, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 8, 65536, 196613, 12, 65536, 196614, 12, 65538, 196615, 6, 0, 196616, 6, 1, 196617, 6, 1, 196618, 6, 1, 196619, 6, 1, 196620, 6, 1, 196621, 6, 2, 196622, 13, 65536, 196623, 0, 65536, 196624, 0, 65537, 196625, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65538, 262145, 12, 0, 262146, 12, 1, 262147, 12, 1, 262148, 12, 1, 262149, 14, 65537, 262150, 14, 65536, 262151, 12, 1, 262152, 12, 1, 262153, 12, 1, 262154, 12, 1, 262155, 12, 1, 262156, 12, 1, 262157, 12, 1, 262158, 21, 65537, 262159, 0, 65536, 262160, 0, 65537, 262161, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65538, 327681, 12, 131072, 327682, 12, 131073, 327683, 12, 131073, 327684, 12, 131073, 327685, 14, 1, 327686, 12, 65537, 327687, 12, 65537, 327688, 12, 65537, 327689, 12, 65537, 327690, 12, 65537, 327691, 14, 0, 327692, 12, 131073, 327693, 12, 131073, 327694, 12, 131074, 327695, 0, 65536, 327696, 0, 65537, 327697, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 2, 65536, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 2, 393221, 12, 131072, 393222, 12, 131073, 393223, 12, 131073, 393224, 12, 131073, 393225, 12, 131073, 393226, 12, 131073, 393227, 12, 131074, 393228, 0, 0, 393229, 0, 1, 393230, 0, 1, 393231, 2, 65537, 393232, 0, 65537, 393233, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 2, 65536, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 1, 458761, 0, 1, 458762, 0, 1, 458763, 0, 1, 458764, 2, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537 )

[node name="Decoration" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 131086, 3, 65536, 196613, 6, 1, 196614, 6, 1, 196615, 6, 1, 196616, 6, 1, 196617, 6, 1, 196618, 6, 1, 196619, 6, 1, 196620, 6, 1, 196621, 6, 2, 196622, 3, 131072, 262150, 2, 3, 262158, 3, 196608, 327686, 2, 3 )

[node name="DoorStart" parent="." instance=ExtResource( 4 )]
position = Vector2( 63, 164 )
closing_animation = true

[node name="DoorEnd" parent="." instance=ExtResource( 4 )]
position = Vector2( 416, 164 )
target_stage = ExtResource( 5 )
coins_needed = 3

[node name="Human" parent="." instance=ExtResource( 6 )]
position = Vector2( 70, 190 )

[node name="Coin" parent="." instance=ExtResource( 7 )]
position = Vector2( 460, 180 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
autoplay = true
mix_target = 1

[node name="RefreshButton" parent="." instance=ExtResource( 9 )]
margin_top = 10.0
margin_bottom = 10.0

[node name="PigWithBomb" parent="." instance=ExtResource( 10 )]
position = Vector2( 395, 192 )
coin_scene = ExtResource( 7 )
super_fast = true

[node name="PigWithBomb2" parent="." instance=ExtResource( 10 )]
position = Vector2( 373, 224 )
coin_scene = ExtResource( 7 )
super_fast = true

[node name="wow_ninja" parent="." instance=ExtResource( 11 )]
margin_left = 10.0
margin_top = 30.0
margin_right = 10.0
margin_bottom = 30.0
text_tutorial = "WoW, You're amazing ninja!"
autorun = false

[node name="hidden_pasage" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 310, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hidden_pasage"]
shape = SubResource( 1 )
[connection signal="body_entered" from="hidden_pasage" to="." method="_on_hidden_pasage_body_entered"]
